; ModuleID = '/home/carl/AnghaBench/linux/net/netfilter/extr_nft_connlimit.c_nft_connlimit_do_dump.c'
source_filename = "/home/carl/AnghaBench/linux/net/netfilter/extr_nft_connlimit.c_nft_connlimit_do_dump.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sk_buff = type { i32 }
%struct.nft_connlimit = type { i64, i32 }

@NFTA_CONNLIMIT_COUNT = common dso_local global i32 0, align 4
@NFTA_CONNLIMIT_FLAGS = common dso_local global i32 0, align 4
@NFT_CONNLIMIT_F_INV = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.sk_buff*, %struct.nft_connlimit*)* @nft_connlimit_do_dump to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @nft_connlimit_do_dump(%struct.sk_buff* %0, %struct.nft_connlimit* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.sk_buff*, align 8
  %5 = alloca %struct.nft_connlimit*, align 8
  store %struct.sk_buff* %0, %struct.sk_buff** %4, align 8
  store %struct.nft_connlimit* %1, %struct.nft_connlimit** %5, align 8
  %6 = load %struct.sk_buff*, %struct.sk_buff** %4, align 8
  %7 = load i32, i32* @NFTA_CONNLIMIT_COUNT, align 4
  %8 = load %struct.nft_connlimit*, %struct.nft_connlimit** %5, align 8
  %9 = getelementptr inbounds %struct.nft_connlimit, %struct.nft_connlimit* %8, i32 0, i32 1
  %10 = load i32, i32* %9, align 8
  %11 = call i32 @htonl(i32 %10)
  %12 = call i64 @nla_put_be32(%struct.sk_buff* %6, i32 %7, i32 %11)
  %13 = icmp ne i64 %12, 0
  br i1 %13, label %14, label %15

14:                                               ; preds = %2
  br label %29

15:                                               ; preds = %2
  %16 = load %struct.nft_connlimit*, %struct.nft_connlimit** %5, align 8
  %17 = getelementptr inbounds %struct.nft_connlimit, %struct.nft_connlimit* %16, i32 0, i32 0
  %18 = load i64, i64* %17, align 8
  %19 = icmp ne i64 %18, 0
  br i1 %19, label %20, label %28

20:                                               ; preds = %15
  %21 = load %struct.sk_buff*, %struct.sk_buff** %4, align 8
  %22 = load i32, i32* @NFTA_CONNLIMIT_FLAGS, align 4
  %23 = load i32, i32* @NFT_CONNLIMIT_F_INV, align 4
  %24 = call i32 @htonl(i32 %23)
  %25 = call i64 @nla_put_be32(%struct.sk_buff* %21, i32 %22, i32 %24)
  %26 = icmp ne i64 %25, 0
  br i1 %26, label %27, label %28

27:                                               ; preds = %20
  br label %29

28:                                               ; preds = %20, %15
  store i32 0, i32* %3, align 4
  br label %30

29:                                               ; preds = %27, %14
  store i32 -1, i32* %3, align 4
  br label %30

30:                                               ; preds = %29, %28
  %31 = load i32, i32* %3, align 4
  ret i32 %31
}

declare dso_local i64 @nla_put_be32(%struct.sk_buff*, i32, i32) #1

declare dso_local i32 @htonl(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
